<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/burn_background2"
tools:context=".activities.ForgotPasswordActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_marginTop="224dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color_primary"
        android:textSize="55sp"
        app:fontFamily="@font/suissnord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/login_logo"
        android:src="@drawable/icons8_login2_64"
        app:layout_constraintBottom_toTopOf="@+id/appTitle"
        app:layout_constraintEnd_toEndOf="@+id/appTitle"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/appTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <EditText
        android:id="@+id/forgotPasswordEmail"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints="joe.smith@email.com"
        android:background="@drawable/text_input_rounding"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#757575"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/btnResetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textForgotPassword"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="288dp"
        android:gravity="center"
        android:text="@string/forgotPassword"
        android:textColor="@color/color_primary"
        android:textSize="18sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordEmail"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/text_input_rounding"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmail"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textBack"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/color_primary"
        android:textSize="18sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="@+id/btnResetPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnResetPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
