<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/burn_background2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/login_logo"
        android:src="@drawable/icons8_login2_64"
        app:layout_constraintBottom_toTopOf="@+id/loginTitle"
        app:layout_constraintEnd_toEndOf="@+id/loginTitle"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/loginTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_marginTop="196dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color_primary"
        android:textSize="55sp"
        app:fontFamily="@font/suissnord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="260dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/color_primary"
        android:textSize="22sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="@+id/loginEmail"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/loginEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_input_rounding"
        android:hint="@string/hint_email"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#757575"
        android:textColorHint="#757575"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin"
        android:autofillHints="joe.smith@email.com" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_input_rounding"
        android:hint="@string/hint_password"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#757575"
        android:textColorHint="#757575"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/loginEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="24dp"
        android:gravity="right"
        android:text="@string/login_forgot_password"
        android:textColor="@color/color_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loginPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/text_input_rounding"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/register"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/color_primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>
