<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/burn_background2">

    <EditText
        android:id="@+id/routeName"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:background="@drawable/text_input_rounding"
        android:hint="@string/hint_routeName"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="#757575"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <Button
        android:id="@+id/chooseImage"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:background="@drawable/text_input_rounding"
        android:text="@string/button_addImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/routeLocation"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="196dp"
        android:background="@drawable/text_input_rounding"
        android:text="@string/button_location"
        app:layout_constraintEnd_toEndOf="@+id/chooseImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/chooseImage"
        app:layout_constraintTop_toBottomOf="@+id/chooseImage" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_input_rounding"
        android:text="@string/button_addRoute"
        app:layout_constraintEnd_toEndOf="@+id/routeLocation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/routeLocation"
        app:layout_constraintTop_toBottomOf="@+id/routeLocation" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/text_input_rounding"
        android:text="@string/button_deleteRoute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnAdd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnAdd"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/routeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="150dp"
        android:minHeight="100dp"
        app:layout_constraintBottom_toTopOf="@+id/routeLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseImage"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/description"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/text_input_rounding"
        android:hint="@string/hint_locationDescription"
        android:inputType="textMultiLine"
        android:maxLength="1000"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="#757575"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeName"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/routeName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

</androidx.constraintlayout.widget.ConstraintLayout>